--- a/vercel.json
+++ b/vercel.json
@@ -2,5 +2,8 @@
   "builds": [
     { "src": "vite.config.js", "use": "@vercel/static-build" }
   ],
-  "outputDirectory": "dist"
+  "outputDirectory": "dist",
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/" }
+  ]
 }
